<resources>
    <string name="app_name">Party Games</string>
    <string name="add">Add</string>
    <string name="players_list">Players list</string>
    <string name="quests_list">Quests list</string>
    <string name="input_your_quest">Input your quest</string>
    <string name="players">Players</string>
    <string name="quests">Quests</string>
    <string name="input_player_name">Input player name</string>
    <string name="delete_item">Delete item</string>
    <string name="start_game">Start game</string>
    <string name="play_description">During the game, one player will get a random task from the prepared pool. \nOf course, the point is to complete the task, but the player can ask for a redraw. \nThe number of redraws depends only on the will of the host. It is also up to the host to accept the task as done. \n\nThe game isn\'t over until you finish it!</string>
    <string name="quests_description">Together with the people you play with, come up with an ideas for quests and questions</string>
    <string name="players_description">Add names/nicks of players you are plaing with</string>
    <string name="play_title">Game process</string>
    <string name="quests_title">Quests tab</string>
    <string name="players_title">Players tab</string>
    <string name="startup_title">Getting started</string>
    <string name="play">play</string>
    <string name="done">Done</string>
    <string name="reroll">Reroll</string>
    <string name="not_enough_alert">"You don't have enough players or quests to start the game! "</string>
    <string name="questions">Quests</string>
    <string name="required">required</string>
    <string name="hint">Hint</string>
    <string name="next">Next</string>
    <string name="more">more</string>
    <string name="and">and</string>
    <string name="players_queue">Players queue</string>
    <string name="empty_input_title">Empty input!</string>
    <string name="empty_input_message">Input can not be empty</string>
    <string name="quests_duplicate_title">Quests duplicate!</string>
    <string name="quests_duplicate_message">This quest already exists and can not be repeated</string>
    <string name="players_duplicate_title">Name exists!</string>
    <string name="players_duplicate_message">This name is already taken and can not be repeated</string>
    <string name="players_hints">Players hints</string>
    <string name="quests_hints">Quests hints</string>
    <string name="game_mechanic">Game mechanic</string>
    <string name="get_random_min_max">to get random number form min to max (0–9999)</string>
    <string name="ping_random_player">to ping random player</string>
    <string name="use">Use</string>
    <string name="remember">Remember</string>
    <string name="be_creative">Be creative</string>
    <string name="good_luck_have_fun">Good luck have fun</string>
    <string name="more_quests_better_gameplay">more quests = better gameplay</string>
    <string name="player_name_cant_contain">Player\'s name can not contain</string>
    <string name="unique_player_names">Player\'s name must be unique</string>
    <string name="delete_selected">Delete selected</string>
    <string name="remove_items">Remove items</string>
    <string name="remove_selected_items">Do you want to remove selected items?</string>
    <string name="removed">removed</string>
    <string name="items">items</string>
    <string name="invalid_name">Invalid name</string>
    <string name="content">Content</string>
    <string name="remove">Remove</string>
    <string name="max_players_message">You reach players limit!</string>
    <string name="max_players_title">Max players</string>
    <string name="max_quests_message">You reach quests limit!</string>
    <string name="max_quests_title">Max quests</string>
    <string name="timeout">Timeout!</string>
    <string name="is_out">is out!</string>
    <string name="play_again">Play again</string>
    <string name="leave">Leave</string>
    <string name="game_over">Game over</string>
    <string name="win">win</string>
    <string name="startup_description">You will become the host of the game, you moderate the quests and players.  You can also participate as a player!</string>
    <string name="choose_player">Choose player</string>
    <string name="queue_mode">Queue mode</string>
    <string name="choose_mode">Choose mode</string>
    <string name="quick_mode">Quick mode</string>
    <string name="queue">Queue</string>
    <string name="quick">Quick</string>
    <string name="choose">Choose</string>
    <string name="queue_description">Easies game mode. \nPlayers are in looped queue. \nThere is no \"Game over\".</string>
    <string name="quick_description">Something like \"Hot potato\". \nRound take 45–60s. \nGoal is to complete quests ASAP. \nOn timeout current player is out. \nLast player win!</string>
    <string name="choose_description">Quite simple. \nAfter completing the quest, you choose either another player or yourself. \nPlayers queue doesn\'t matter here.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>