<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/playNavBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        android:contentDescription="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playersNavBtn"
        app:layout_constraintStart_toEndOf="@+id/questsNavBtn"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/round_play_arrow_24" />

    <Button
        android:id="@+id/questsNavBtn"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/quests"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playNavBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playersNavBtn"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/players"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playNavBtn" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/playNavBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/startupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/startup_title"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            tools:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/startupDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startup_description"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground" />

        <TextView
            android:id="@+id/playersTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/players_title"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/playersDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/players_description"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground" />

        <TextView
            android:id="@+id/questsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/quests_title"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/questsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quests_description"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground" />

        <TextView
            android:id="@+id/playTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/play_title"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/playDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_description"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>