<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    tools:context=".QuestsActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteSelectedQuestsBtn"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/delete_selected"
        android:scaleX=".75"
        android:scaleY=".75"
        app:layout_constraintBottom_toTopOf="@+id/questsHintBtn"
        app:layout_constraintEnd_toEndOf="@+id/questsHintBtn"
        app:layout_constraintStart_toStartOf="@+id/questsHintBtn"
        app:srcCompat="@drawable/round_delete_24"
        tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/playNavBtn_Q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        android:contentDescription="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playersNavBtn_Q"
        app:layout_constraintStart_toEndOf="@+id/questsNavBtn_Q"
        app:srcCompat="@drawable/round_play_arrow_24" />

    <Button
        android:id="@+id/questsNavBtn_Q"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/quests"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playNavBtn_Q"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playersNavBtn_Q"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/players"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playNavBtn_Q" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/questsRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/playNavBtn_Q"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questsListLabel" />

    <EditText
        android:id="@+id/questsTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="quest"
        android:ems="10"
        android:hint="@string/input_your_quest"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/questsAddBtn"
        app:layout_constraintEnd_toStartOf="@+id/questsAddBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/questsAddBtn" />

    <Button
        android:id="@+id/questsAddBtn"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/questsRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/questsTextInput" />

    <TextView
        android:id="@+id/questsListLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/quests_list"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/questsRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/questsHintBtn"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/hint"
        app:layout_constraintBottom_toTopOf="@+id/questsAddBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/round_question_mark_32" />

</androidx.constraintlayout.widget.ConstraintLayout>